--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -9,17 +14,226 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.centered-block {
+  margin: auto;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.link::after {
+  content: "\2192";
+}
+
+
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color:#f2f2f2;
+  position: relative;
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
+}
+
+.logo_place_header {
+  background-image: url('../images/logo_place_header.svg');
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header__title {
+  align-self: center;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+  max-width: 730px;
+  margin-left: 64px;
+  z-index: 2;
+}
+
+.header__subtitle {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0;
+  top: 64px;
+}
+
+.header__main-illustration {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+}
+
+.two-columns {
+  width: 80%;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+.two-columns__brief {
+  align-items: flex-start;
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color:  #2f80ed;
+
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.digits > .section-subtitle {
+  margin-top: 20px;
+}
+
+.section-title, .section-subtitle {
+  width: 60%;
+  text-align: center;
+}
+
+.section-title {
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+}
+
+.section-subtitle {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.table {
+  width: 1100px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+}
+
+.table__text {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin-top: 20px
+}
+
+.feynman {
+  background-color:#f2f2f2;
+  background-image: url("../images/feynman.png");
+  background-repeat: no-repeat;
+  background-position: bottom  left;
+  height: 890px;
+  padding-top: 100px;
+  position: relative;
+}
+
+.feynman__title {
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+  width: 648px;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  margin-top: 70px;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  padding: 90px 0 90px;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark, .section-subtitle_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 2;
+}
+
+.kaufman > .section-subtitle {
+  margin-top: 20px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +242,74 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height:877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding: 60px 0 40px;
+  color: white;
+}
+
+.footer__columns {
+  width: 90%;
+  justify-content: space-between;
+}
+
+.footer__column {
+  min-height: 250px;
+}
+
+.footer__column_content_copyright {
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.svg");
+}
+
+.footer__author {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+}
+
+.footer__column-links {
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0 16px;
+}
+
+.footer__column-link {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 30px;
+  color: white;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
