--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -12,14 +7,6 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
-.centered-block {
-  margin: auto;
-}
-
-.flex-container {
-  display: flex;
 }
 
 .link {
@@ -39,6 +26,7 @@
   /* выше установили ограничения для секции */
   background-color:#f2f2f2;
   position: relative;
+  display: flex;
 }
 
 .logo {
@@ -55,6 +43,7 @@
 }
 
 .header__title {
+  margin: 0;
   align-self: center;
   font-size: 102px;
   line-height: 96px;
@@ -65,17 +54,19 @@
 }
 
 .header__subtitle {
+  margin: 0;
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
   position: absolute;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  max-width: 388px;
+  width: 100%;
   z-index: 2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -94,21 +85,26 @@
   height: 608px;
 }
 
-.two-columns {
-  width: 80%;
-  justify-content: space-between;
-  margin: 0 auto;
+.description {
   padding-top: 100px;
 }
 
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
 .two-columns__brief {
+  margin: 0;
   align-items: flex-start;
-  width: 175px;
+  max-width: 175px;
+  width: 100%;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
   color:  #2f80ed;
-
 }
 
 .two-columns__main-text {
@@ -117,6 +113,7 @@
 }
 
 .two-columns__paragraph {
+  margin: 0;
   margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
@@ -138,7 +135,7 @@
   padding-bottom: 100px;
 }
 
-.digits > .section-subtitle {
+.section-subtitle {
   margin-top: 20px;
 }
 
@@ -148,21 +145,33 @@
 }
 
 .section-title {
+  margin: 0;
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
+  margin: auto;
 }
 
 .section-subtitle {
+  margin: 0;
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
+  margin: auto;
 }
 
 .table {
   width: 1100px;
+  margin: auto;
+}
+
+.table > ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  list-style-type: none;
 }
 
 .table__cell {
@@ -171,12 +180,14 @@
 }
 
 .table__heading {
+  margin: 0;
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
 }
 
 .table__text {
+  margin: 0;
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
@@ -184,29 +195,34 @@
 }
 
 .feynman {
+  box-sizing: border-box;
   background-color:#f2f2f2;
   background-image: url("../images/feynman.png");
   background-repeat: no-repeat;
   background-position: bottom  left;
-  height: 890px;
+  min-height: 890px;
   padding-top: 100px;
   position: relative;
 }
 
 .feynman__title {
+  margin: 0;
   font-size: 120px;
   font-weight: 600;
   line-height: 1.15;
   width: 648px;
   text-align: center;
+  margin: auto;
 }
 
 .feynman__subtitle {
+  margin: 0;
   text-align: center;
   margin-top: 70px;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
+  margin: auto;
 }
 
 .feynman__link {
@@ -234,6 +250,9 @@
 
 .kaufman > .section-subtitle {
   margin-top: 20px;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -257,6 +276,7 @@
 }
 
 .footer {
+  box-sizing: border-box;
   min-height: 350px;
   background-color: #1f1f1f;
   padding: 60px 0 40px;
@@ -265,15 +285,18 @@
 
 .footer__columns {
   width: 90%;
+  display: flex;
   justify-content: space-between;
+  margin: auto;
 }
 
 .footer__column {
   min-height: 250px;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_copyright {
-  flex-direction: column;
   justify-content: space-between;
   flex-basis: 711px;
 }
@@ -283,12 +306,14 @@
 }
 
 .footer__author {
+  margin: 0;
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
 }
 
 .footer__column-heading {
+  margin: 0;
   font-size: 18px;
   font-weight: 600;
   line-height: 30px;
