--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,9 @@
 
 .section-title {
   margin: 0;
+}
+
+.section-title {
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
@@ -154,6 +157,9 @@
 
 .section-subtitle {
   margin: 0;
+}
+
+.section-subtitle {
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
@@ -207,6 +213,9 @@
 
 .feynman__title {
   margin: 0;
+}
+
+.feynman__title {
   font-size: 120px;
   font-weight: 600;
   line-height: 1.15;
@@ -217,6 +226,9 @@
 
 .feynman__subtitle {
   margin: 0;
+}
+
+.feynman__subtitle {
   text-align: center;
   margin-top: 70px;
   font-size: 36px;
