--- a/styles/style.css
+++ b/styles/style.css
@@ -135,10 +135,6 @@
   padding-bottom: 100px;
 }
 
-.section-subtitle {
-  margin-top: 20px;
-}
-
 .section-title, .section-subtitle {
   width: 60%;
   text-align: center;
@@ -155,7 +151,7 @@
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
-  margin: 0 auto;
+  margin: 20px auto 0;
 }
 
 .table {
@@ -242,13 +238,6 @@
   color: white;
   position: relative;
   z-index: 2;
-}
-
-.kaufman > .section-subtitle {
-  margin-top: 20px;
-  font-size: 24px;
-  font-weight: normal;
-  line-height: 34px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
