--- a/styles/style.css
+++ b/styles/style.css
@@ -155,13 +155,9 @@
 }
 
 .table {
-  width: 1100px;
-  margin: auto;
-}
-
-.table > ul {
-  margin: 0;
   padding: 0;
+  margin: 0 auto;
+  width: 1100px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
